[project]
name = "retrieval-based-voice-conversion-webui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "absl-py>=1.2.0",
    "aria2>=0.0.1b0 ; sys_platform != 'darwin'",
    "audioread>=3.1.0",
    "av>=16.1.0",
    "colorama>=0.4.5",
    "cython>=3.2.4",
    "einops>=0.8.2",
    "fairseq==0.12.2",
    "faiss-cpu==1.7.3",
    "fastapi==0.88",
    "ffmpeg-python>=0.2.0",
    "ffmpy==0.3.1",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "fsspec>=2022.11.0",
    "gin>=0.1.6",
    "gin-config>=0.5.0",
    "gradio>=3,<4",
    "httpx>=0.28.1",
    "jinja2>=3.1.2",
    "joblib>=1.1.0",
    "json5>=0.13.0",
    "librosa==0.9.1",
    "llvmlite==0.39.0",
    "local-attention>=1.11.2",
    "markdown>=3.10.1",
    "matplotlib>=3.7.0",
    "matplotlib-inline>=0.1.3",
    "noisereduce>=3.0.3",
    "numba==0.56.4",
    "numpy==1.23.5",
    "onnxruntime>=1.23.2 ; sys_platform == 'darwin'",
    "onnxruntime-gpu>=1.23.2 ; sys_platform != 'darwin'",
    "pillow>=9.1.1",
    "praat-parselmouth>=0.4.2",
    "pyasn1>=0.4.8",
    "pyasn1-modules>=0.2.8",
    "pydub>=0.25.1",
    "pysimplegui>=5.0.8.3",
    "python-dotenv>=1.0.0",
    "pyworld==0.3.2",
    "pyyaml>=6.0",
    "resampy>=0.4.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "setuptools<81",
    "sounddevice<0.5.0",
    "soundfile>=0.12.1",
    "sympy>=1.11.1",
    "tabulate>=0.8.10",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchcrepe==0.0.20",
    "torchfcpe>=0.0.4",
    "torchvision==0.20.1",
    "tornado>=6.1",
    "tqdm>=4.63.1",
    "uc-micro-py>=1.0.1",
    "uvicorn>=0.21.1",
    "werkzeug>=2.2.3",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
